# focaccia

./: .gitmodules  README.md  compare.py  fix-box64.patch  flake.nix  focaccia.py  interpreter.py  lldb_target.py  main.py  miasm_test.py  miasm_util.py  pyproject.toml  q.sh  run.py  symbolic.py  test.py  trace_symbols.py
arch/: x86.py
focaccia/: compare.py  context.py  lldb_target.py  miasm_util.py  parser.py  reproducer.py  snapshot.py  symbolic.py  utils.py
focaccia/arch/: x86.py
reproducers/: 1370-minimal.S  1371-minimal  1372-minimal  1374-minimal  1376-minimal  1377-minimal  2175-minimal  issue-1370a.c  issue-1370b.c  issue-1371.c  issue-1372.c  issue-1374.c  issue-1375.c  issue-1376.c  issue-1377.c  issue-1828867.c  issue-1832422.c  issue-1861404.c  issue-2175.c  issue-2248.S  issue-2248.c  issue-2419.c  issue-2495.c  issue-508.c  memcached.basic.sh  sqlite.basic.sql
src/focaccia/: _deterministic_impl.py  benchmark.py  cli.py  compare.py  deterministic.py  lldb_target.py  miasm_util.py  parser.py  reproducer.py  snapshot.py  symbolic.py  trace.py  utils.py
src/focaccia/arch/: aarch64.py  aarch64_dczid.py  arch.py  x86.py
src/focaccia/benchmark/: _benchmark.py  timer.py
src/focaccia/native/: lldb_target.py  tracer.py
src/focaccia/qemu/: _qemu_threads.py  _qemu_tool.py  deterministic.py  syscall.py  target.py  x86.py
src/focaccia/tools/: _qemu_tool.py  benchmark_focaccia.py  capture_transforms.py  validate_qemu.py  validation_server.py
src/focaccia/tools/qemu/: _qemu_tool.py  deterministic.py  validate_qemu.py  x86.py
tests/: test_snapshot.py  test_sparse_memory.py
tools/: _qemu_tool.py  verify_qemu.py
